@@ -2,6 +2,7 @@ PostGIS 3.0.2
 2020/XX/XX
 
 * Bug Fixes and Enhancements *
+  - #4652, Fix several memory related bugs in ST_GeomFromGML
 
 
 
